Xóa các file không cần thiết và tối ưu mã nguồn, bao gồm cập nhật cấu hình và loại bỏ các tài liệu API không sử dụng.